force-app/main/default/objects/Lead/fields/Interest_Area__c.field-meta.xml
<CustomField>
    <fullName>Interest_Area__c</fullName>
    <inlineHelpText>Interest Area from NCR.com Contact Us lead form</inlineHelpText>
    <label>Interest Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATM Solution and Services Sales</fullName>
            </value>
            <value>
                <fullName>Cinema Solutions</fullName>
            </value>
            <value>
                <fullName>eCommerce and Solutions</fullName>
            </value>
            <value>
                <fullName>Item Processing and Check Imaging Solutions</fullName>
            </value>
            <value>
                <fullName>Printer Supplies</fullName>
            </value>
            <value>
                <fullName>Restaurant Solutions</fullName>
            </value>
            <value>
                <fullName>Retail Solutions</fullName>
            </value>
            <value>
                <fullName>Stadium Solutions</fullName>
            </value>
            <value>
                <fullName>Travel Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>