force-app/main/default/objects/Lead/fields/IP_State_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_State_Region_Code__c</fullName>
    <description>CATM</description>
    <label>IP State/Region Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>