force-app/main/default/objects/Lead/fields/IP_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>IP_Time_Zone__c</fullName>
    <description>CATM</description>
    <label>IP Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>