force-app/main/default/objects/Lead/fields/is_Flag_Case_Conversion__c.field-meta.xml
<CustomField>
    <fullName>is_Flag_Case_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the lead which is created by case conversion</description>
    <label>Case Converted</label>
    <type>Checkbox</type>
</CustomField>