force-app/main/default/objects/Lead/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>CATM</description>
    <label>Latitude</label>
    <length>18</length>
    <type>Text</type>
</CustomField>