force-app/main/default/objects/Lead/fields/Lead_Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Marketing_Notes__c</fullName>
    <label>Lead - Marketing Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>