force-app/main/default/objects/Lead/fields/Lead_owner_assigned_date__c.field-meta.xml
<CustomField>
    <fullName>Lead_owner_assigned_date__c</fullName>
    <label>Lead owner assigned date</label>
    <type>DateTime</type>
</CustomField>