force-app/main/default/objects/Lead/fields/Lead_Qualified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualified_DateTime__c</fullName>
    <label>Lead Qualified DateTime</label>
    <type>DateTime</type>
</CustomField>