force-app/main/default/objects/Lead/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <description>Adjunct to the Lead Source pick list, but no dependencies.</description>
    <inlineHelpText>After choosing Lead Source, give details here.</inlineHelpText>
    <label>Lead Source Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>