force-app/main/default/objects/Lead/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>IAV</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>INQ</fullName>
                <default>true</default>
                <label>INQ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>