force-app/main/default/objects/Lead/fields/Lead_State_SDL_Team__c.field-meta.xml
<CustomField>
    <fullName>Lead_State_SDL_Team__c</fullName>
    <description>If SDL Group users related Lead&apos;s status or owner is not changed within 48 hrs ,an email notification should be sent to the Lead owner and lead manager of SDL Group users based on this check-box condition.</description>
    <label>Lead State (SDL Team)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to SDL Team</fullName>
            </value>
            <value>
                <fullName>Processed by SDL Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>