force-app/main/default/objects/Lead/fields/LeadOwnerManage__c.field-meta.xml
<CustomField>
    <fullName>LeadOwnerManage__c</fullName>
    <label>LeadOwnerManage</label>
    <type>Email</type>
</CustomField>