force-app/main/default/objects/Lead/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>This field is used on UI to track the Lead Source information</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Agent/Distributor</fullName>
            </value>
            <value>
                <fullName>AllpointNetwork.com</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>ATMNetwork.com</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Cardtronics.com</fullName>
            </value>
            <value>
                <fullName>Cashzone</fullName>
            </value>
            <value>
                <fullName>CEC Visit</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>NCR Rep</fullName>
            </value>
            <value>
                <fullName>Neos</fullName>
            </value>
            <value>
                <fullName>Operation AHOD</fullName>
            </value>
            <value>
                <fullName>Operation Teamwork</fullName>
            </value>
            <value>
                <fullName>Organic Search/SEO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>