force-app/main/default/objects/Lead/fields/LeadStatusSLA__c.field-meta.xml
<CustomField>
    <fullName>LeadStatusSLA__c</fullName>
    <label>LeadStatusSLA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>