force-app/main/default/objects/Lead/fields/Marketing_Qualified_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Qualified_Contact_Date__c</fullName>
    <label>Marketing Qualified Contact Trigger Date</label>
    <type>DateTime</type>
</CustomField>