force-app/main/default/objects/Lead/fields/Mixed_HW__c.field-meta.xml
<CustomField>
    <fullName>Mixed_HW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Mixed HW</label>
    <type>Checkbox</type>
</CustomField>