force-app/main/default/objects/Lead/fields/Name_of_Brand_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Brand_if_Other__c</fullName>
    <label>Name of Brand, if Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>