force-app/main/default/objects/Lead/fields/Namer_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Namer_Date_Field__c</fullName>
    <label>Namer Date Field</label>
    <type>DateTime</type>
</CustomField>