force-app/main/default/objects/Lead/fields/Namer_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Namer_Notification_Days__c</fullName>
    <formula>TODAY()- DATEVALUE(Namer_Date_Field__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Namer Notification Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>