force-app/main/default/objects/Lead/fields/Namer_Six_Days_Notification__c.field-meta.xml
<CustomField>
    <fullName>Namer_Six_Days_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Namer Six Days Notification</label>
    <type>Checkbox</type>
</CustomField>