force-app/main/default/objects/Lead/fields/NCR_Console_for_Aloha__c.field-meta.xml
<CustomField>
    <fullName>NCR_Console_for_Aloha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>NCR Console for Aloha</label>
    <type>Checkbox</type>
</CustomField>