force-app/main/default/objects/Lead/fields/NCR_Mobile_Pay__c.field-meta.xml
<CustomField>
    <fullName>NCR_Mobile_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>NCR Mobile Pay</label>
    <type>Checkbox</type>
</CustomField>