force-app/main/default/objects/Lead/fields/Netsuite_Managed_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Managed_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Managed Trigger</label>
    <type>Checkbox</type>
</CustomField>