force-app/main/default/objects/Lead/fields/Netsuite_Managed_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Managed_Trigger_Date__c</fullName>
    <label>NetSuite Managed Trigger Date</label>
    <type>DateTime</type>
</CustomField>