force-app/main/default/objects/Lead/fields/Networks_and_Security_Services__c.field-meta.xml
<CustomField>
    <fullName>Networks_and_Security_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Networks and Security Services</label>
    <type>Checkbox</type>
</CustomField>