force-app/main/default/objects/Lead/fields/NotificationForSalesRep__c.field-meta.xml
<CustomField>
    <fullName>NotificationForSalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotificationForSalesRep</label>
    <type>Checkbox</type>
</CustomField>