force-app/main/default/objects/Lead/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25</fullName>
            </value>
            <value>
                <fullName>25-100</fullName>
            </value>
            <value>
                <fullName>100-250</fullName>
            </value>
            <value>
                <fullName>250-1K</fullName>
            </value>
            <value>
                <fullName>1K-10K</fullName>
            </value>
            <value>
                <fullName>10K-50K</fullName>
            </value>
            <value>
                <fullName>50K-100K</fullName>
            </value>
            <value>
                <fullName>100K+</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>