force-app/main/default/objects/Lead/fields/Nurture_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Trigger_Date__c</fullName>
    <label>Nurture Trigger Date</label>
    <type>DateTime</type>
</CustomField>