force-app/main/default/objects/Lead/fields/OptinDate_Lead__c.field-meta.xml
<CustomField>
    <fullName>OptinDate_Lead__c</fullName>
    <description>This field will be updated by Eloque. Date when contact/lead opted out. This field is created under GDPR request.</description>
    <label>Opt-in Date</label>
    <type>Date</type>
</CustomField>