force-app/main/default/objects/Lead/fields/Partner_Managed_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Managed_Trigger_Date__c</fullName>
    <label>Partner Managed Trigger Date</label>
    <type>DateTime</type>
</CustomField>