force-app/main/default/objects/Lead/fields/Partner_Region_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partner_Region_Interest__c</fullName>
    <description>Theater - was Region - Describes what regions are they interested in becoming a partner in</description>
    <label>Theater</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>JAPAN KOREA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>