force-app/main/default/objects/Lead/fields/PEU_as_of__c.field-meta.xml
<CustomField>
    <fullName>PEU_as_of__c</fullName>
    <label>PEU as of</label>
    <type>Date</type>
</CustomField>