force-app/main/default/objects/Lead/fields/POS_Version__c.field-meta.xml
<CustomField>
    <fullName>POS_Version__c</fullName>
    <description>6.7 field</description>
    <label>POS Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>