force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Services (Kiosk, Personas Print)</fullName>
            </value>
            <value>
                <fullName>Accounts Payable and Invoices</fullName>
            </value>
            <value>
                <fullName>Advanced Marketing Solution</fullName>
            </value>
            <value>
                <fullName>AirlineAirport Travel</fullName>
            </value>
            <value>
                <fullName>Allpoint+ ATM Deposit Network</fullName>
            </value>
            <value>
                <fullName>Allpoint Surcharge Free Network</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduling</fullName>
            </value>
            <value>
                <fullName>ASRV-Consulting and Integration</fullName>
            </value>
            <value>
                <fullName>ASRV-Software</fullName>
            </value>
            <value>
                <fullName>ASRV-Support and Managed Services</fullName>
            </value>
            <value>
                <fullName>ATMpass</fullName>
            </value>
            <value>
                <fullName>ATM Solution and Services Sales</fullName>
            </value>
            <value>
                <fullName>BBM</fullName>
            </value>
            <value>
                <fullName>Become a Distributor</fullName>
            </value>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Branch Optimisation-Branch Assist</fullName>
            </value>
            <value>
                <fullName>Car Rental / Return</fullName>
            </value>
            <value>
                <fullName>Category Analyzer</fullName>
            </value>
            <value>
                <fullName>CD-Banks (22,25,26,28,67,71,77,87)</fullName>
            </value>
            <value>
                <fullName>CD-ISO/Retail (EP3010,3300,3600,3800,62)</fullName>
            </value>
            <value>
                <fullName>Central Promotions</fullName>
            </value>
            <value>
                <fullName>Cinema Solutions</fullName>
            </value>
            <value>
                <fullName>Command Center</fullName>
            </value>
            <value>
                <fullName>Connected Payments</fullName>
            </value>
            <value>
                <fullName>Connected Services</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>DAX RPO</fullName>
            </value>
            <value>
                <fullName>Digital Contact Management</fullName>
            </value>
            <value>
                <fullName>Digital Insight</fullName>
            </value>
            <value>
                <fullName>Digital Signage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>