force-app/main/default/objects/Lead/fields/Prospect_Current_Systems__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Current_Systems__c</fullName>
    <inlineHelpText>Indicate the current system the Prospect is using to manage their business</inlineHelpText>
    <label>Prospect&apos;s Current Systems</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubIndustry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Light Speed</fullName>
            </value>
            <value>
                <fullName>Homegrown/Custom</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>GK Systems</fullName>
            </value>
            <value>
                <fullName>Instacart</fullName>
            </value>
            <value>
                <fullName>Rosie</fullName>
            </value>
            <value>
                <fullName>Shop Hero</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>E-growcery</fullName>
            </value>
            <value>
                <fullName>Webstop</fullName>
            </value>
            <value>
                <fullName>Glibarco</fullName>
                <label>Glibarco(Passport)</label>
            </value>
            <value>
                <fullName>Verifone</fullName>
                <label>Verifone(Commander)</label>
            </value>
            <value>
                <fullName>Comdata</fullName>
            </value>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Aptos</fullName>
            </value>
            <value>
                <fullName>BFC Associates</fullName>
            </value>
            <value>
                <fullName>AFS</fullName>
            </value>
            <value>
                <fullName>JDA</fullName>
            </value>
            <value>
                <fullName>Infor</fullName>
            </value>
            <value>
                <fullName>Pro-cat</fullName>
            </value>
            <value>
                <fullName>Manhattan Associates</fullName>
            </value>
            <value>
                <fullName>Fiserv</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>World Pay</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>PNC Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>