force-app/main/default/objects/Lead/fields/Prospect_s_Current_Systems__c.field-meta.xml
<CustomField>
    <fullName>Prospect_s_Current_Systems__c</fullName>
    <inlineHelpText>Approximately, when is the Prospect&apos;s CURRENT Contract with a competitor set to Renew or Expire (in months)?</inlineHelpText>
    <label>Months Until Contract Renewal/Expiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>3-6</fullName>
            </value>
            <value>
                <fullName>6-9</fullName>
            </value>
            <value>
                <fullName>9-12</fullName>
            </value>
            <value>
                <fullName>13+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>