force-app/main/default/objects/Lead/fields/Prospects_Products_Services_Solutions_of__c.field-meta.xml
<CustomField>
    <fullName>Prospects_Products_Services_Solutions_of__c</fullName>
    <inlineHelpText>What Products/Solution(s) is the Prospect interested in?</inlineHelpText>
    <label>Prospects Products/Solutions of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point of Sale</fullName>
            </value>
            <value>
                <fullName>Self-Checkout</fullName>
            </value>
            <value>
                <fullName>NCR Freshop</fullName>
            </value>
            <value>
                <fullName>Retail Analytics</fullName>
            </value>
            <value>
                <fullName>Store Virtualization</fullName>
            </value>
            <value>
                <fullName>Loyalty &amp; Customer Engagement</fullName>
            </value>
            <value>
                <fullName>NCR Merch &amp; Supply Chain</fullName>
            </value>
            <value>
                <fullName>Fuel Forecourt</fullName>
            </value>
            <value>
                <fullName>Professional Services for Retail</fullName>
            </value>
            <value>
                <fullName>Retail Instillation</fullName>
            </value>
            <value>
                <fullName>Retail Support Services</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Cardtronics</fullName>
            </value>
            <value>
                <fullName>Kitchen Production System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>