force-app/main/default/objects/Lead/fields/QSTS__c.field-meta.xml
<CustomField>
    <fullName>QSTS__c</fullName>
    <description>6.7 field</description>
    <label>QSTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>