force-app/main/default/objects/Lead/fields/Reassign_Date__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date__c</fullName>
    <label>Reassign Date</label>
    <type>DateTime</type>
</CustomField>