force-app/main/default/objects/Lead/fields/Reseller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact__c</fullName>
    <label>Reseller Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>