force-app/main/default/objects/Lead/fields/Reseller_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Phone__c</fullName>
    <label>Reseller Contact Phone</label>
    <type>Phone</type>
</CustomField>