force-app/main/default/objects/Lead/fields/Reseller_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Email_1__c</fullName>
    <label>Reseller Email 1</label>
    <type>Email</type>
</CustomField>