force-app/main/default/objects/Lead/fields/Reseller_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Email_2__c</fullName>
    <label>Reseller Email 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>