force-app/main/default/objects/Lead/fields/Reseller_office__c.field-meta.xml
<CustomField>
    <fullName>Reseller_office__c</fullName>
    <description>Reseller Office name for Partner managed leads</description>
    <label>Reseller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>