force-app/main/default/objects/Lead/fields/Reseller_Region__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Region__c</fullName>
    <label>Reseller Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>