force-app/main/default/objects/Lead/fields/Restaurant_CustID__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_CustID__c</fullName>
    <description>CustID field from restaurantdata.com</description>
    <label>Restaurant CustID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>