force-app/main/default/objects/Lead/fields/Restaurant_ID__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_ID__c</fullName>
    <description>ID field from restaurantdata.com</description>
    <label>Restaurant ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>