force-app/main/default/objects/Lead/fields/Return_to_Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Nurture_Reason__c</fullName>
    <label>Return to Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not a Decision Maker</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Timed Out</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Selected a Competitor -Prospect has selected a competitor’s product/service and are no longer looking</fullName>
            </value>
            <value>
                <fullName>Not Responsive -Prospect’s contact info verified but has not responded to calls/email over the course of 30 days</fullName>
            </value>
            <value>
                <fullName>Timing -Prospect is early in search/purchasing process and is not ready to move forward with NCR/Partner</fullName>
            </value>
            <value>
                <fullName>Budget -Prospect does not currently have the resources to move forward with NCR/Partner for Products/Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>