force-app/main/default/objects/Lead/fields/Run_Rule__c.field-meta.xml
<CustomField>
    <fullName>Run_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Using Active Assignment Rule</label>
    <type>Checkbox</type>
</CustomField>