force-app/main/default/objects/Lead/fields/SAL_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date__c</fullName>
    <label>SAL Trigger Date</label>
    <type>DateTime</type>
</CustomField>