force-app/main/default/objects/Lead/fields/Sales_Rep_Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Lead_Quality__c</fullName>
    <inlineHelpText>1 = Poor, 2 = Good, 3 = High Quality</inlineHelpText>
    <label>Sales Rep Lead Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>